--- a/daftarsiswa.html
+++ b/daftarsiswa.html
@@ -33,12 +33,12 @@
     <!-- 🩷 GRID SISWA -->
     <div class="grid-siswa">
 
-      <div class="card-siswa"><img src="fotosiswa/aisyah.jpg"><h3>Aisyah Hari Afika Liawati</h3><p>NISN: 0088407259</p><p>Jenis Kelamin: P</p><p>No.Absen 1</p></div>
-      <div class="card-siswa"><img src="fotosiswa/andika.jpg"><h3>Andika Wahyu Utama</h3><p>NISN: 0086240696</p><p>Jenis Kelamin: L</p><p>No.Absen 2</p></div>
-      <div class="card-siswa"><img src="fotosiswa/anita.jpg"><h3>Anita</h3><p>NISN: 0097813384</p><p>Jenis Kelamin: P</p><p>No.Absen 3</p></div>
+      <div class="card-siswa"><img src="fotosiswa1/aisyah.jpg"><h3>Aisyah Hari Afika Liawati</h3><p>NISN: 0088407259</p><p>Jenis Kelamin: P</p><p>No.Absen 1</p></div>
+      <div class="card-siswa"><img src="fotosiswa1/andika.jpg"><h3>Andika Wahyu Utama</h3><p>NISN: 0086240696</p><p>Jenis Kelamin: L</p><p>No.Absen 2</p></div>
+      <div class="card-siswa"><img src="fotosiswa1/anita.jpg"><h3>Anita</h3><p>NISN: 0097813384</p><p>Jenis Kelamin: P</p><p>No.Absen 3</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/aurel.jpg">
+        <img src="fotosiswa1/aurel.jpg">
         <h3>Aurel Effilian Nadjuwa Putri</h3>
         <p>NISN: 0081988699</p>
         <p>Jenis Kelamin: P</p>
@@ -46,11 +46,11 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/chaidarur.jpg"><h3>Chaidarur Rohman</h3><p>NISN: 0089169729</p><p>Jenis Kelamin: L</p><p>No.Absen 5</p></div>
-      <div class="card-siswa"><img src="fotosiswa/charissa.jpg"><h3>Charissa Martha Dewi</h3><p>NISN: 0094243901</p><p>Jenis Kelamin: P</p><p>No.Absen 6</p></div>
+      <div class="card-siswa"><img src="fotosiswa1/chaidarur.jpg"><h3>Chaidarur Rohman</h3><p>NISN: 0089169729</p><p>Jenis Kelamin: L</p><p>No.Absen 5</p></div>
+      <div class="card-siswa"><img src="fotosiswa2/charissa.jpg"><h3>Charissa Martha Dewi</h3><p>NISN: 0094243901</p><p>Jenis Kelamin: P</p><p>No.Absen 6</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/dinda.jpg">
+        <img src="fotosiswa2/dinda.jpg">
         <h3>Dinda Nur Lania Dewi</h3>
         <p>NISN: 0092518106</p>
         <p>Jenis Kelamin: P</p>
@@ -58,10 +58,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/dwi.jpg"><h3>Dwi Astuti</h3><p>NISN: 0092149701</p><p>Jenis Kelamin: P</p><p>No.Absen 8</p></div>
+      <div class="card-siswa"><img src="fotosiswa2/dwi.jpg"><h3>Dwi Astuti</h3><p>NISN: 0092149701</p><p>Jenis Kelamin: P</p><p>No.Absen 8</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/elviana.jpg">
+        <img src="fotosiswa2/elviana.jpg">
         <h3>Elviana Jovita Andini</h3>
         <p>NISN: 0099297587</p>
         <p>Jenis Kelamin: P</p>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/erdiva.jpg">
+        <img src="fotosiswa2/erdiva.jpg">
         <h3>Erdiva Berliana Putri</h3>
         <p>NISN: 0081366086</p>
         <p>Jenis Kelamin: P</p>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/keany.jpg">
+        <img src="fotosiswa3/keany.jpg">
         <h3>Keany Agatha Nadzif</h3>
         <p>NISN: 0095142288</p>
         <p>Jenis Kelamin: L</p>
@@ -87,11 +87,11 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/khoirun.jpg"><h3>Khoirun Niysa</h3><p>NISN: 0087715787</p><p>Jenis Kelamin: P</p><p>No.Absen 12</p></div>
-      <div class="card-siswa"><img src="fotosiswa/khoirul.jpg"><h3>Khoirul Rahmandhani</h3><p>NISN: 0095543004</p><p>Jenis Kelamin: L</p><p>No.Absen 13</p></div>
+      <div class="card-siswa"><img src="fotosiswa3/khoirun.jpg"><h3>Khoirun Niysa</h3><p>NISN: 0087715787</p><p>Jenis Kelamin: P</p><p>No.Absen 12</p></div>
+      <div class="card-siswa"><img src="fotosiswa3/khoirul.jpg"><h3>Khoirul Rahmandhani</h3><p>NISN: 0095543004</p><p>Jenis Kelamin: L</p><p>No.Absen 13</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/kirana.jpg">
+        <img src="fotosiswa3/kirana.jpg">
         <h3>Kirana Dwi Rahmayani</h3>
         <p>NISN: 0092904860</p>
         <p>Jenis Kelamin: P</p>
@@ -100,7 +100,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/kusnul.jpg">
+        <img src="fotosiswa4/kusnul.jpg">
         <h3>Kusnul Khotimah</h3>
         <p>NISN: 0094492541</p>
         <p>Jenis Kelamin: P</p>
@@ -108,10 +108,10 @@
         <p class="role">💚 UKS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/lila.jpg"><h3>Lila Nur Latifah</h3><p>NISN: 0091758986</p><p>Jenis Kelamin: P</p><p>No.Absen 16</p></div>
+      <div class="card-siswa"><img src="fotosiswa4/lila.jpg"><h3>Lila Nur Latifah</h3><p>NISN: 0091758986</p><p>Jenis Kelamin: P</p><p>No.Absen 16</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/lukman.jpg">
+        <img src="fotosiswa4/lukman.jpg">
         <h3>Lukman Ardiansyah</h3>
         <p>NISN: 3095363552</p>
         <p>Jenis Kelamin: L</p>
@@ -119,14 +119,14 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/machfudz.jpg"><h3>Machfudz Khasan</h3><p>NISN: 0095305076</p><p>Jenis Kelamin: L</p><p>No.Absen 18</p></div>
+      <div class="card-siswa"><img src="fotosiswa4/machfudz.jpg"><h3>Machfudz Khasan</h3><p>NISN: 0095305076</p><p>Jenis Kelamin: L</p><p>No.Absen 18</p></div>
 
-      <div class="card-siswa"><img src="fotosiswa/maratus.jpg"><h3>Mar’atus Sholihah</h3><p>NISN: 0099243960</p><p>Jenis Kelamin: P</p><p>No.Absen 19</p></div>
+      <div class="card-siswa"><img src="fotosiswa4/maratus.jpg"><h3>Mar’atus Sholihah</h3><p>NISN: 0099243960</p><p>Jenis Kelamin: P</p><p>No.Absen 19</p></div>
 
-      <div class="card-siswa"><img src="fotosiswa/marsya.jpg"><h3>Marsya Niswa Azzahra</h3><p>NISN: 0095794465</p><p>Jenis Kelamin: P</p><p>No.Absen 20</p></div>
+      <div class="card-siswa"><img src="fotosiswa5/marsya.jpg"><h3>Marsya Niswa Azzahra</h3><p>NISN: 0095794465</p><p>Jenis Kelamin: P</p><p>No.Absen 20</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/rafael.jpg">
+        <img src="fotosiswa5/rafael.jpg">
         <h3>Moh Rafael Rizky Abadi</h3>
         <p>NISN: 0109280070</p>
         <p>Jenis Kelamin: L</p>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/novita.jpg">
+        <img src="fotosiswa5/novita.jpg">
         <h3>Novita Anggraeni</h3>
         <p>NISN: 0087621720</p>
         <p>Jenis Kelamin: P</p>
@@ -143,10 +143,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/nur.jpg"><h3>Nur Khasan</h3><p>NISN: 0093230483</p><p>Jenis Kelamin: L</p><p>No.Absen 23</p></div>
+      <div class="card-siswa"><img src="fotosiswa5/nur.jpg"><h3>Nur Khasan</h3><p>NISN: 0093230483</p><p>Jenis Kelamin: L</p><p>No.Absen 23</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/kholifah.jpg">
+        <img src="fotosiswa3/kholifah.jpg">
         <h3>Nur Kholifah</h3>
         <p>NISN: 0088459332</p>
         <p>Jenis Kelamin: P</p>
@@ -154,10 +154,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/renatha.jpg"><h3>Renatha Putri</h3><p>NISN: 0086964168</p><p>Jenis Kelamin: P</p><p>No.Absen 25</p></div>
+      <div class="card-siswa"><img src="fotosiswa5/renatha.jpg"><h3>Renatha Putri</h3><p>NISN: 0086964168</p><p>Jenis Kelamin: P</p><p>No.Absen 25</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/rifa.jpg">
+        <img src="fotosiswa6/rifa.jpg">
         <h3>Rifa Arinal Haq</h3>
         <p>NISN: 0088757634</p>
         <p>Jenis Kelamin: P</p>
@@ -165,12 +165,12 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/ririn.jpg"><h3>Ririn Ida Aulia</h3><p>NISN: 0083362397</p><p>Jenis Kelamin: P</p><p>No.Absen 27</p></div>
+      <div class="card-siswa"><img src="fotosiswa6/ririn.jpg"><h3>Ririn Ida Aulia</h3><p>NISN: 0083362397</p><p>Jenis Kelamin: P</p><p>No.Absen 27</p></div>
 
-      <div class="card-siswa"><img src="fotosiswa/risma.jpg"><h3>Risma Vinustika</h3><p>NISN: 0094360670</p><p>Jenis Kelamin: P</p><p>No.Absen 28</p></div>
+      <div class="card-siswa"><img src="fotosiswa6/risma.jpg"><h3>Risma Vinustika</h3><p>NISN: 0094360670</p><p>Jenis Kelamin: P</p><p>No.Absen 28</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/sasmita.jpg">
+        <img src="fotosiswa6/sasmita.jpg">
         <h3>Sasmita Adinda Putri</h3>
         <p>NISN: 0091409333</p>
         <p>Jenis Kelamin: P</p>
@@ -181,7 +181,7 @@
       <div class="card-siswa"><img src="fotosiswa/shafa.jpg"><h3>Shafa Atika Zahra</h3><p>NISN: 0089759988</p><p>Jenis Kelamin: P</p><p>No.Absen 30</p></div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/sholekha.jpg">
+        <img src="fotosiswa7/sholekha.jpg">
         <h3>Sholekha</h3>
         <p>NISN: 0099601310</p>
         <p>Jenis Kelamin: P</p>
@@ -190,7 +190,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="fotosiswa/silvia.jpg">
+        <img src="fotosiswa7/silvia.jpg">
         <h3>Silvia Nur Rohmah</h3>
         <p>NISN: 0086496905</p>
         <p>Jenis Kelamin: P</p>
@@ -198,11 +198,11 @@
         <p class="role">🔵 Dewan Ambalan</p>
       </div>
 
-      <div class="card-siswa"><img src="fotosiswa/supriadi.jpg"><h3>Supriadi</h3><p>NISN: 0082263769</p><p>Jenis Kelamin: L</p><p>No.Absen 33</p></div>
+      <div class="card-siswa"><img src="fotosiswa7/supriadi.jpg"><h3>Supriadi</h3><p>NISN: 0082263769</p><p>Jenis Kelamin: L</p><p>No.Absen 33</p></div>
 
-      <div class="card-siswa"><img src="fotosiswa/tiara.jpg"><h3>Tiara Celcilya Putri</h3><p>NISN: 0094524644</p><p>Jenis Kelamin: P</p><p>No.Absen 34</p></div>
+      <div class="card-siswa"><img src="fotosiswa7/tiara.jpg"><h3>Tiara Celcilya Putri</h3><p>NISN: 0094524644</p><p>Jenis Kelamin: P</p><p>No.Absen 34</p></div>
 
-      <div class="card-siswa"><img src="fotosiswa/wahidatul.jpg"><h3>Wahidatul Muharom</h3><p>NISN: 0095218186</p><p>Jenis Kelamin: P</p><p>No.Absen 35</p></div>
+      <div class="card-siswa"><img src="fotosiswa7/wahidatul.jpg"><h3>Wahidatul Muharom</h3><p>NISN: 0095218186</p><p>Jenis Kelamin: P</p><p>No.Absen 35</p></div>
     </div>
   </div>
 
