--- a/daftarsiswa.html
+++ b/daftarsiswa.html
@@ -33,7 +33,14 @@
     <!-- 🩷 GRID SISWA -->
     <div class="grid-siswa">
 
-      <div class="card-siswa"><img src="aisyah.JPG"><h3>Aisyah Hari Afika Liawati</h3><p>NISN: 0088407259</p><p>Jenis Kelamin: P</p><p>No.Absen 1</p></div>
+      <div class="card-siswa">
+  <img src="aisyah.JPG">
+  <h3>Aisyah Hari Afika Liawati</h3>
+  <p>NISN: 0088407259</p>
+  <p>Jenis Kelamin: P</p>
+  <p>No.Absen 1</p>
+</div>
+      
       <div class="card-siswa"><img src="andika.jpg"><h3>Andika Wahyu Utama</h3><p>NISN: 0086240696</p><p>Jenis Kelamin: L</p><p>No.Absen 2</p></div>
       <div class="card-siswa"><img src="anita.jpg"><h3>Anita</h3><p>NISN: 0097813384</p><p>Jenis Kelamin: P</p><p>No.Absen 3</p></div>
 
