--- a/daftarsiswa.html
+++ b/daftarsiswa.html
@@ -34,18 +34,18 @@
     <div class="grid-siswa">
 
       <div class="card-siswa">
-  <img src="aisyah.JPG">
-  <h3>Aisyah Hari Afika Liawati</h3>
-  <p>NISN: 0088407259</p>
-  <p>Jenis Kelamin: P</p>
-  <p>No.Absen 1</p>
-</div>
+        <img src="aisyah.JPG">
+        <h3>Aisyah Hari Afika Liawati</h3>
+        <p>NISN: 0088407259</p>
+        <p>Jenis Kelamin: P</p>
+        <p>No.Absen 1</p>
+      </div>
       
-      <div class="card-siswa"><img src="andika.jpg"><h3>Andika Wahyu Utama</h3><p>NISN: 0086240696</p><p>Jenis Kelamin: L</p><p>No.Absen 2</p></div>
-      <div class="card-siswa"><img src="anita.jpg"><h3>Anita</h3><p>NISN: 0097813384</p><p>Jenis Kelamin: P</p><p>No.Absen 3</p></div>
+      <div class="card-siswa"><img src="andika.JPG"><h3>Andika Wahyu Utama</h3><p>NISN: 0086240696</p><p>Jenis Kelamin: L</p><p>No.Absen 2</p></div>
+      <div class="card-siswa"><img src="anita.JPG"><h3>Anita</h3><p>NISN: 0097813384</p><p>Jenis Kelamin: P</p><p>No.Absen 3</p></div>
 
       <div class="card-siswa">
-        <img src="aurel.jpg">
+        <img src="aurel.JPG">
         <h3>Aurel Effilian Nadjuwa Putri</h3>
         <p>NISN: 0081988699</p>
         <p>Jenis Kelamin: P</p>
@@ -53,11 +53,11 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="chaidarur.jpg"><h3>Chaidarur Rohman</h3><p>NISN: 0089169729</p><p>Jenis Kelamin: L</p><p>No.Absen 5</p></div>
-      <div class="card-siswa"><img src="charissa.jpg"><h3>Charissa Martha Dewi</h3><p>NISN: 0094243901</p><p>Jenis Kelamin: P</p><p>No.Absen 6</p></div>
+      <div class="card-siswa"><img src="chaidarur.JPG"><h3>Chaidarur Rohman</h3><p>NISN: 0089169729</p><p>Jenis Kelamin: L</p><p>No.Absen 5</p></div>
+      <div class="card-siswa"><img src="charissa.JPG"><h3>Charissa Martha Dewi</h3><p>NISN: 0094243901</p><p>Jenis Kelamin: P</p><p>No.Absen 6</p></div>
 
       <div class="card-siswa">
-        <img src="dinda.jpg">
+        <img src="dinda.JPG">
         <h3>Dinda Nur Lania Dewi</h3>
         <p>NISN: 0092518106</p>
         <p>Jenis Kelamin: P</p>
@@ -65,10 +65,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="dwi.jpg"><h3>Dwi Astuti</h3><p>NISN: 0092149701</p><p>Jenis Kelamin: P</p><p>No.Absen 8</p></div>
+      <div class="card-siswa"><img src="dwi.JPG"><h3>Dwi Astuti</h3><p>NISN: 0092149701</p><p>Jenis Kelamin: P</p><p>No.Absen 8</p></div>
 
       <div class="card-siswa">
-        <img src="elviana.jpg">
+        <img src="elviana.JPG">
         <h3>Elviana Jovita Andini</h3>
         <p>NISN: 0099297587</p>
         <p>Jenis Kelamin: P</p>
@@ -77,7 +77,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="erdiva.jpg">
+        <img src="erdiva.JPG">
         <h3>Erdiva Berliana Putri</h3>
         <p>NISN: 0081366086</p>
         <p>Jenis Kelamin: P</p>
@@ -86,7 +86,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="keany.jpg">
+        <img src="keany.JPG">
         <h3>Keany Agatha Nadzif</h3>
         <p>NISN: 0095142288</p>
         <p>Jenis Kelamin: L</p>
@@ -94,11 +94,11 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="khoirun.jpg"><h3>Khoirun Niysa</h3><p>NISN: 0087715787</p><p>Jenis Kelamin: P</p><p>No.Absen 12</p></div>
-      <div class="card-siswa"><img src="khoirul.jpg"><h3>Khoirul Rahmandhani</h3><p>NISN: 0095543004</p><p>Jenis Kelamin: L</p><p>No.Absen 13</p></div>
+      <div class="card-siswa"><img src="khoirun.JPG"><h3>Khoirun Niysa</h3><p>NISN: 0087715787</p><p>Jenis Kelamin: P</p><p>No.Absen 12</p></div>
+      <div class="card-siswa"><img src="khoirul.JPG"><h3>Khoirul Rahmandhani</h3><p>NISN: 0095543004</p><p>Jenis Kelamin: L</p><p>No.Absen 13</p></div>
 
       <div class="card-siswa">
-        <img src="kirana.jpg">
+        <img src="kirana.JPG">
         <h3>Kirana Dwi Rahmayani</h3>
         <p>NISN: 0092904860</p>
         <p>Jenis Kelamin: P</p>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="kusnul.jpg">
+        <img src="kusnul.JPG">
         <h3>Kusnul Khotimah</h3>
         <p>NISN: 0094492541</p>
         <p>Jenis Kelamin: P</p>
@@ -115,10 +115,10 @@
         <p class="role">💚 UKS</p>
       </div>
 
-      <div class="card-siswa"><img src="lila.jpg"><h3>Lila Nur Latifah</h3><p>NISN: 0091758986</p><p>Jenis Kelamin: P</p><p>No.Absen 16</p></div>
+      <div class="card-siswa"><img src="lila.JPG"><h3>Lila Nur Latifah</h3><p>NISN: 0091758986</p><p>Jenis Kelamin: P</p><p>No.Absen 16</p></div>
 
       <div class="card-siswa">
-        <img src="lukman.jpg">
+        <img src="lukman.JPG">
         <h3>Lukman Ardiansyah</h3>
         <p>NISN: 3095363552</p>
         <p>Jenis Kelamin: L</p>
@@ -126,14 +126,12 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="machfudz.jpg"><h3>Machfudz Khasan</h3><p>NISN: 0095305076</p><p>Jenis Kelamin: L</p><p>No.Absen 18</p></div>
-
-      <div class="card-siswa"><img src="maratus.jpg"><h3>Mar’atus Sholihah</h3><p>NISN: 0099243960</p><p>Jenis Kelamin: P</p><p>No.Absen 19</p></div>
-
-      <div class="card-siswa"><img src="marsya.jpg"><h3>Marsya Niswa Azzahra</h3><p>NISN: 0095794465</p><p>Jenis Kelamin: P</p><p>No.Absen 20</p></div>
+      <div class="card-siswa"><img src="machfudz.JPG"><h3>Machfudz Khasan</h3><p>NISN: 0095305076</p><p>Jenis Kelamin: L</p><p>No.Absen 18</p></div>
+      <div class="card-siswa"><img src="maratus.JPG"><h3>Mar’atus Sholihah</h3><p>NISN: 0099243960</p><p>Jenis Kelamin: P</p><p>No.Absen 19</p></div>
+      <div class="card-siswa"><img src="marsya.JPG"><h3>Marsya Niswa Azzahra</h3><p>NISN: 0095794465</p><p>Jenis Kelamin: P</p><p>No.Absen 20</p></div>
 
       <div class="card-siswa">
-        <img src="rafael.jpg">
+        <img src="rafael.JPG">
         <h3>Moh Rafael Rizky Abadi</h3>
         <p>NISN: 0109280070</p>
         <p>Jenis Kelamin: L</p>
@@ -142,7 +140,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="novita.jpg">
+        <img src="novita.JPG">
         <h3>Novita Anggraeni</h3>
         <p>NISN: 0087621720</p>
         <p>Jenis Kelamin: P</p>
@@ -150,10 +148,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="nur.jpg"><h3>Nur Khasan</h3><p>NISN: 0093230483</p><p>Jenis Kelamin: L</p><p>No.Absen 23</p></div>
+      <div class="card-siswa"><img src="nur.JPG"><h3>Nur Khasan</h3><p>NISN: 0093230483</p><p>Jenis Kelamin: L</p><p>No.Absen 23</p></div>
 
       <div class="card-siswa">
-        <img src="kholifah.jpg">
+        <img src="kholifah.JPG">
         <h3>Nur Kholifah</h3>
         <p>NISN: 0088459332</p>
         <p>Jenis Kelamin: P</p>
@@ -161,10 +159,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="renatha.jpg"><h3>Renatha Putri</h3><p>NISN: 0086964168</p><p>Jenis Kelamin: P</p><p>No.Absen 25</p></div>
+      <div class="card-siswa"><img src="renatha.JPG"><h3>Renatha Putri</h3><p>NISN: 0086964168</p><p>Jenis Kelamin: P</p><p>No.Absen 25</p></div>
 
       <div class="card-siswa">
-        <img src="rifa.jpg">
+        <img src="rifa.JPG">
         <h3>Rifa Arinal Haq</h3>
         <p>NISN: 0088757634</p>
         <p>Jenis Kelamin: P</p>
@@ -172,12 +170,12 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="ririn.jpg"><h3>Ririn Ida Aulia</h3><p>NISN: 0083362397</p><p>Jenis Kelamin: P</p><p>No.Absen 27</p></div>
+      <div class="card-siswa"><img src="ririn.JPG"><h3>Ririn Ida Aulia</h3><p>NISN: 0083362397</p><p>Jenis Kelamin: P</p><p>No.Absen 27</p></div>
 
-      <div class="card-siswa"><img src="risma.jpg"><h3>Risma Vinustika</h3><p>NISN: 0094360670</p><p>Jenis Kelamin: P</p><p>No.Absen 28</p></div>
+      <div class="card-siswa"><img src="risma.JPG"><h3>Risma Vinustika</h3><p>NISN: 0094360670</p><p>Jenis Kelamin: P</p><p>No.Absen 28</p></div>
 
       <div class="card-siswa">
-        <img src="sasmita.jpg">
+        <img src="sasmita.JPG">
         <h3>Sasmita Adinda Putri</h3>
         <p>NISN: 0091409333</p>
         <p>Jenis Kelamin: P</p>
@@ -185,10 +183,10 @@
         <p class="role">🟣 OSIS</p>
       </div>
 
-      <div class="card-siswa"><img src="shafa.jpg"><h3>Shafa Atika Zahra</h3><p>NISN: 0089759988</p><p>Jenis Kelamin: P</p><p>No.Absen 30</p></div>
+      <div class="card-siswa"><img src="shafa.JPG"><h3>Shafa Atika Zahra</h3><p>NISN: 0089759988</p><p>Jenis Kelamin: P</p><p>No.Absen 30</p></div>
 
       <div class="card-siswa">
-        <img src="sholekha.jpg">
+        <img src="sholekha.JPG">
         <h3>Sholekha</h3>
         <p>NISN: 0099601310</p>
         <p>Jenis Kelamin: P</p>
@@ -197,7 +195,7 @@
       </div>
 
       <div class="card-siswa">
-        <img src="silvia.jpg">
+        <img src="silvia.JPG">
         <h3>Silvia Nur Rohmah</h3>
         <p>NISN: 0086496905</p>
         <p>Jenis Kelamin: P</p>
@@ -205,11 +203,12 @@
         <p class="role">🔵 Dewan Ambalan</p>
       </div>
 
-      <div class="card-siswa"><img src="supriadi.jpg"><h3>Supriadi</h3><p>NISN: 0082263769</p><p>Jenis Kelamin: L</p><p>No.Absen 33</p></div>
+      <div class="card-siswa"><img src="supriadi.JPG"><h3>Supriadi</h3><p>NISN: 0082263769</p><p>Jenis Kelamin: L</p><p>No.Absen 33</p></div>
 
-      <div class="card-siswa"><img src="tiara.jpg"><h3>Tiara Celcilya Putri</h3><p>NISN: 0094524644</p><p>Jenis Kelamin: P</p><p>No.Absen 34</p></div>
+      <div class="card-siswa"><img src="tiara.JPG"><h3>Tiara Celcilya Putri</h3><p>NISN: 0094524644</p><p>Jenis Kelamin: P</p><p>No.Absen 34</p></div>
 
-      <div class="card-siswa"><img src="wahidatul.jpg"><h3>Wahidatul Muharom</h3><p>NISN: 0095218186</p><p>Jenis Kelamin: P</p><p>No.Absen 35</p></div>
+      <div class="card-siswa"><img src="wahidatul.JPG"><h3>Wahidatul Muharom</h3><p>NISN: 0095218186</p><p>Jenis Kelamin: P</p><p>No.Absen 35</p></div>
+
     </div>
   </div>
 
