--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -37,55 +37,56 @@
   </div>
 
   <!-- SISANYA DI BAWAH -->
-  <div class="grid-struktur">
-    <div class="card-struktur">
-      <img src="fotosiswa/chaidarur.jpg" alt="Ketua Kelas">
-      <h3>CHAIDARUR ROHMAN</h3>
-      <p>Ketua Kelas</p>
-    </div>
+      <div class="card-struktur">
+        <img src="chaidarur.jpg" alt="Ketua Kelas">
+        <h3>CHAIDARUR ROHMAN</h3>
+        <p>Ketua Kelas</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/andika.jpg" alt="Wakil Ketua">
-      <h3>ANDIKA WAHYU UTAMA</h3>
-      <p>Wakil Ketua</p>
-    </div>
+      <div class="card-struktur">
+        <img src="andika.jpg" alt="Wakil Ketua">
+        <h3>ANDIKA WAHYU UTAMA</h3>
+        <p>Wakil Ketua</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/ririn.jpg" alt="Sekretaris 1">
-      <h3>RIRIN IDA AULIA</h3>
-      <p>Sekretaris 1</p>
-    </div>
+      <div class="card-struktur">
+        <img src="ririn.jpg" alt="Sekretaris 1">
+        <h3>RIRIN IDA AULIA</h3>
+        <p>Sekretaris 1</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/lila.jpg" alt="Sekretaris 2">
-      <h3>LILA NUR LATIFAH</h3>
-      <p>Sekretaris 2</p>
-    </div>
+      <div class="card-struktur">
+        <img src="lila.jpg" alt="Sekretaris 2">
+        <h3>LILA NUR LATIFAH</h3>
+        <p>Sekretaris 2</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/risma.jpg" alt="Bendahara 1">
-      <h3>RISMA VINUSTIKA</h3>
-      <p>Bendahara 1</p>
-    </div>
+      <div class="card-struktur">
+        <img src="risma.jpg" alt="Bendahara 1">
+        <h3>RISMA VINUSTIKA</h3>
+        <p>Bendahara 1</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/kusnul.jpg" alt="Bendahara 2">
-      <h3>KUSNUL KHOTIMAH</h3>
-      <p>Bendahara 2</p>
-    </div>
+      <div class="card-struktur">
+        <img src="kusnul.jpg" alt="Bendahara 2">
+        <h3>KUSNUL KHOTIMAH</h3>
+        <p>Bendahara 2</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/tiara.jpg" alt="Seksi Kekeluargaan">
-      <h3>TIARA CELCILYA PUTRI</h3>
-      <p>Seksi Kekeluargaan</p>
-    </div>
+      <div class="card-struktur">
+        <img src="tiara.jpg" alt="Seksi Kekeluargaan">
+        <h3>TIARA CELCILYA PUTRI</h3>
+        <p>Seksi Kekeluargaan</p>
+      </div>
 
-    <div class="card-struktur">
-      <img src="fotosiswa/maratus.jpg" alt="Seksi Kebersihan">
-      <h3>MAR’ATUS SHOLIHAH</h3>
-      <p>Seksi Kebersihan</p>
+      <div class="card-struktur">
+        <img src="maratus.jpg" alt="Seksi Kebersihan">
+        <h3>MAR’ATUS SHOLIHAH</h3>
+        <p>Seksi Kebersihan</p>
+      </div>
+
     </div>
   </div>
-</div>
+
 </body>
 </html>
