Update image file extensions to uppercase

--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -38,19 +38,19 @@
 
   <!-- SISANYA DI BAWAH -->
       <div class="card-struktur">
-        <img src="chaidarur.jpg" alt="Ketua Kelas">
+        <img src="chaidarur.JPG" alt="Ketua Kelas">
         <h3>CHAIDARUR ROHMAN</h3>
         <p>Ketua Kelas</p>
       </div>
 
       <div class="card-struktur">
-        <img src="andika.jpg" alt="Wakil Ketua">
+        <img src="andika.JPG" alt="Wakil Ketua">
         <h3>ANDIKA WAHYU UTAMA</h3>
         <p>Wakil Ketua</p>
       </div>
 
       <div class="card-struktur">
-        <img src="ririn.jpg" alt="Sekretaris 1">
+        <img src="ririn.JPG" alt="Sekretaris 1">
         <h3>RIRIN IDA AULIA</h3>
         <p>Sekretaris 1</p>
       </div>
