Update image file extensions to uppercase

--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -56,25 +56,25 @@
       </div>
 
       <div class="card-struktur">
-        <img src="lila.jpg" alt="Sekretaris 2">
+        <img src="lila.JPG" alt="Sekretaris 2">
         <h3>LILA NUR LATIFAH</h3>
         <p>Sekretaris 2</p>
       </div>
 
       <div class="card-struktur">
-        <img src="risma.jpg" alt="Bendahara 1">
+        <img src="risma.JPG" alt="Bendahara 1">
         <h3>RISMA VINUSTIKA</h3>
         <p>Bendahara 1</p>
       </div>
 
       <div class="card-struktur">
-        <img src="kusnul.jpg" alt="Bendahara 2">
+        <img src="kusnul.JPG" alt="Bendahara 2">
         <h3>KUSNUL KHOTIMAH</h3>
         <p>Bendahara 2</p>
       </div>
 
       <div class="card-struktur">
-        <img src="tiara.jpg" alt="Seksi Kekeluargaan">
+        <img src="tiara.JPG" alt="Seksi Kekeluargaan">
         <h3>TIARA CELCILYA PUTRI</h3>
         <p>Seksi Kekeluargaan</p>
       </div>
