--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -3,40 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Struktur Organisasi | Kelas Kita</title>
-  <link rel="icon" type="image/png" href="logokelas.png">
-  <link rel="stylesheet" href="style.css">
+  <title>Struktur Organisasi Kelas</title>
+  <link rel="stylesheet" href="struktur.css">
 </head>
-
 <body>
-<header class="navbar">
-  <nav>
-    <ul>
-      <li><a href="index.html">🏠 Beranda</a></li>
-      <li><a href="daftarsiswa.html">👩‍🎓 Daftar Siswa</a></li>
-      <li><a href="strukturorganisasi.html">🌸 Struktur Organisasi</a></li>
-      <li><a href="jadwalpelajaran.html">📚 Jadwal Pelajaran</a></li>
-      <li><a href="jadwalpiket.html">🧹 Jadwal Piket</a></li>
-      <li><a href="gurupengajar.html">👩‍🏫 Guru Pengajar</a></li>
-      <li><a href="galeri.html">📸 Galeri</a></li>
-    </ul>
-  </nav>
-</header>
-
 
   <!-- ISI HALAMAN -->
-<div class="struktur-container">
+  <div class="struktur-container">
 
-  <!-- WALI KELAS (1 di atas tengah) -->
-  <div class="wali">
-    <div class="card-struktur">
-      <img src="fotoguru/buyuni.jpeg" alt="Wali Kelas">
-      <h3>YUNI PONCO HARIATI, S.SI</h3>
-      <p>Wali Kelas</p>
+    <!-- WALI KELAS -->
+    <div class="wali">
+      <div class="card-struktur">
+        <img src="fotoguru/buyuni.jpeg" alt="Wali Kelas">
+        <h3>YUNI PONCO HARIATI, S.SI</h3>
+        <p>Wali Kelas</p>
+      </div>
     </div>
-  </div>
 
-  <!-- SISANYA DI BAWAH -->
+    <!-- SISWA DAN PENGURUS KELAS -->
+    <div class="grid-struktur">
+
       <div class="card-struktur">
         <img src="chaidarur.JPG" alt="Ketua Kelas">
         <h3>CHAIDARUR ROHMAN</h3>
@@ -80,7 +66,7 @@
       </div>
 
       <div class="card-struktur">
-        <img src="maratus.jpg" alt="Seksi Kebersihan">
+        <img src="maratus.JPG" alt="Seksi Kebersihan">
         <h3>MAR’ATUS SHOLIHAH</h3>
         <p>Seksi Kebersihan</p>
       </div>
