--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -3,13 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Struktur Organisasi Kelas</title>
-  <link rel="stylesheet" href="struktur.css">
+  <title>Struktur Organisasi | XI RPL</title>
+  <link rel="icon" type="image/png" href="logokelas.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- ISI HALAMAN -->
+  <header class="navbar">
+    <nav>
+      <ul>
+        <li><a href="index.html">🏠 Beranda</a></li>
+        <li><a href="daftarsiswa.html">👩‍🎓 Daftar Siswa</a></li>
+        <li><a href="strukturorganisasi.html" class="active">🌸 Struktur Organisasi</a></li>
+        <li><a href="jadwalpelajaran.html">📚 Jadwal Pelajaran</a></li>
+        <li><a href="jadwalpiket.html">🧹 Jadwal Piket</a></li>
+        <li><a href="gurupengajar.html">👩‍🏫 Guru Pengajar</a></li>
+        <li><a href="galeri.html">📸 Galeri</a></li>
+      </ul>
+    </nav>
+  </header>
+    <!-- ✨ JUDUL HALAMAN -->
   <div class="struktur-container">
+    <h1>Struktur Organisasi Kelas XI RPL</h1>
+    <p class="subtitle">🌷 Bersatu dalam tanggung jawab dan kebersamaan 💫</p>
 
     <!-- WALI KELAS -->
     <div class="wali">
