--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -22,7 +22,8 @@
       </ul>
     </nav>
   </header>
-    <!-- ✨ JUDUL HALAMAN -->
+
+  <!-- ✨ ISI HALAMAN -->
   <div class="struktur-container">
     <h1>Struktur Organisasi Kelas XI RPL</h1>
     <p class="subtitle">🌷 Bersatu dalam tanggung jawab dan kebersamaan 💫</p>
@@ -38,7 +39,6 @@
 
     <!-- SISWA DAN PENGURUS KELAS -->
     <div class="grid-struktur">
-
       <div class="card-struktur">
         <img src="chaidarur.JPG" alt="Ketua Kelas">
         <h3>CHAIDARUR ROHMAN</h3>
@@ -86,7 +86,6 @@
         <h3>MAR’ATUS SHOLIHAH</h3>
         <p>Seksi Kebersihan</p>
       </div>
-
     </div>
   </div>
 
